--- a/app/src/main/res/xml/widget_info.xml
+++ b/app/src/main/res/xml/widget_info.xml
@@ -4,7 +4,7 @@
     android:minHeight="110dp"
     android:updatePeriodMillis="1000"
     android:initialLayout="@layout/widget_layout"
-    android:configure="com.example.markdownwidget.MarkdownWidgetConfigureActivity"
+    android:configure="com.adamdlewis.markdownwidget.MarkdownWidgetConfigureActivity"
     android:resizeMode="horizontal|vertical"
     android:widgetCategory="home_screen">
 </appwidget-provider>
